--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
   font-family: sans-serif;
   margin: 0 50px;
-  /* background-color: #e5e5e5; */
-  background-color: rgb(44, 33, 33);
+  background-color: #e5e5e5;
   overflow: hidden;
-  /* display: flex; */
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
